--- a/static/css/concat.css
+++ b/static/css/concat.css
@@ -7766,7 +7766,7 @@ p.foundingpartners {
       margin: 0; }
       .sb-custom-menu > div > ul > li > a {
         display: block;
-        padding: 16px 13px;
+        padding: 16px 11px;
         position: relative; }
         @media screen and (max-width: 1120px) {
           .sb-custom-menu > div > ul > li > a {
